--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.13.5",
+    "framer-motion": "^10.12.23",
+    "motion": "^10.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-parallax-tilt": "^1.7.154",
+    "react-router-dom": "^6.14.2",
+    "react-tilt": "^1.0.2",
+    "three": "^0.154.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
