--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-parallax-tilt": "^1.7.154",
     "react-router-dom": "^6.14.2",
     "react-tilt": "^1.0.2",
+    "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.154.0"
   },
   "devDependencies": {
