--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@react-three/fiber": "^8.13.5",
+    "emailjs": "^4.0.2",
     "framer-motion": "^10.12.23",
     "motion": "^10.16.2",
     "react": "^18.2.0",
