--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@react-three/drei": "^9.79.3",
     "@react-three/fiber": "^8.13.5",
     "emailjs": "^4.0.2",
     "framer-motion": "^10.12.23",
